# sidol

./: .env.example  .gitignore  AGENTS.md  CONNECTOR_GUIDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
sidol/: __init__.py  cache.py  context.py  core.py  errors.py  registry.py  router.py  testing.py  types.py
sidol/connectors/: __init__.py  airtable.py  airtable_utils.py  base.py  csv_.py  http_utils.py  servicenow.py  servicenow_utils.py  sqlite_.py
tests/: test_sidol_core.py
tests/connectors/: test_airtable.py  test_airtable_live.py  test_csv.py  test_http_utils.py  test_servicenow_live.py  test_sqlite.py
