[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidol"
version = "0.1.3"
description = "SQL for everything. Read, write, delete across any API or database."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sidol contributors"},
]
keywords = ["sql", "api", "duckdb", "servicenow", "database", "connector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlglot>=25.20",
    "duckdb>=1.2",
    "pyarrow>=15",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.3",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/mitayan0/sidol"
Documentation = "https://github.com/mitayan0/sidol#readme"
Repository = "https://github.com/mitayan0/sidol"
Issues = "https://github.com/mitayan0/sidol/issues"

# ========== UV CONFIGURATION ==========
[tool.uv]
# Pin specific versions for reproducibility
default-groups = ["dev"]

[tool.uv.pip]
generate-hashes = true

# ========== RUFF (LINTER) ==========
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ========== MYPY (TYPE CHECKER) ==========
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# ========== PYTEST ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# ========== HATCHLING ==========
[tool.hatch.build.targets.wheel]
packages = ["sidol"]

[tool.hatch.version]
path = "sidol/__init__.py"
